--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@discordjs/builders": "^0.9.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.25.2",
-    "discord.js": "^13.3.1"
+    "discord.js": "^13.3.1",
+    "mongoose": "^6.1.3",
+    "node-cron": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^8.4.1",
